retroarch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retroarch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retroarch
  template:
    metadata:
      labels:
        app: retroarch
    spec:
      nodeSelector:
        ssd: "true"  # Ensures the pod is scheduled on the node with the SSD
      containers:
        - name: retroarch
          image: inglebard/retroarch-web
          ports:
            - containerPort: 6901
          resources:
            requests:
              ephemeral-storage: "5Gi"
            limits:
              ephemeral-storage: "10Gi"
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nfs-config-pvc
