retroarch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retroarch
spec:
  selector:
    app: retroarch
  ports:
    - port: 80
      targetPort: 6901
  type: ClusterIP
