retroarch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retroarch
spec:
  ingressClassName: nginx 
  rules:
  - host: retroarch.localhome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: retroarch
            port: 
              number: 80
